cabal-version: 1.12

name:           canios-cli
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/JuanFdS/delCanio#readme>
homepage:       https://github.com/JuanFdS/delCanio#readme
bug-reports:    https://github.com/JuanFdS/delCanio/issues
author:         Todos somos del Canio
maintainer:     del@Canio.com
copyright:      2019 delCanio fanbase
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/JuanFdS/delCanio

executable canios-cli
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.7 && <5
    , canios
    , hip
    , ilist
    , transformers
  default-language: Haskell2010