cabal-version: 1.12

name:           canios
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/JuanFdS/delCanio#readme>
homepage:       https://github.com/JuanFdS/delCanio#readme
bug-reports:    https://github.com/JuanFdS/delCanio/issues
author:         Todos somos del Canio
maintainer:     del@Canio.com
copyright:      2019 delCanio fanbase
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/JuanFdS/delCanio

library
  exposed-modules:
      Canios
      Imagen
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , hip
    , ilist
  default-language: Haskell2010

test-suite canios-test
  other-modules:
    CaniosSpec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      QuickCheck
    , aeson
    , base >=4.7 && <5
    , canios
    , hspec
  default-language: Haskell2010
